# faaray

./: .gitignore  CMakeLists.txt  README.md  faareytest.cpp  gfatest.cpp  main.cpp  multithread.cpp  multithreadall.cpp  pointerpass.cpp  sharedpointer.cpp
FaaRay/: CMakeLists.txt  FaaRay.hpp  Shared.hpp
FaaRay/BRDFs/: BRDF.cpp  BRDF.hpp  GlossySpecularBRDF.cpp  GlossySpecularBRDF.hpp  LambertianBRDF.cpp  LambertianBRDF.hpp
FaaRay/Base/: Base.cpp  Base.hpp
FaaRay/Cameras/: Camera.cpp  Camera.hpp  PinholeCamera.cpp  PinholeCamera.hpp
FaaRay/GeometricObjects/: Disc.cpp  Disc.hpp  GeometricObject.cpp  GeometricObject.hpp  OpenCylinder.cpp  OpenCylinder.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
FaaRay/Lights/: AmbientLight.cpp  AmbientLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
FaaRay/Materials/: Material.cpp  Material.hpp  MatteMaterial.cpp  MatteMaterial.hpp  PhongMaterial.cpp  PhongMaterial.hpp
FaaRay/Render/: Ray.cpp  Ray.hpp  RenderJob.cpp  RenderJob.hpp  ShadeRec.hpp  TraceThread.cpp  TraceThread.hpp
FaaRay/Samplers/: MultiJitteredSampler.cpp  MultiJitteredSampler.hpp  RegularSampler.cpp  RegularSampler.hpp  Sampler.cpp  Sampler.hpp
FaaRay/Scene/: Scene.cpp  Scene.hpp  ViewPlane.cpp  ViewPlane.hpp
FaaRay/Shared/: Shared.hpp
FaaRay/Tracers/: RayCastTracer.cpp  RayCastTracer.hpp  Tracer.cpp  Tracer.hpp
FaaRay/Utils/: FaaRay.cpp  FaaRay.hpp  Utils.cpp  Utils.hpp
GFA/: CMakeLists.txt  GFA.cpp  GFA.hpp  Matrix.cpp  Matrix.hpp  Normal.cpp  Normal.hpp  Point.cpp  Point.hpp  Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  PointArray.cpp  PointArray.hpp  RGBColor.cpp  RGBColor.hpp  RGBColorBuffer.cpp  RGBColorBuffer.hpp  Shared.cpp  Shared.hpp  Vector.cpp  Vector.hpp  (+4 more)
GUI/: Bose.cpp  Bose.hpp  CMakeLists.txt  GUI.cpp  GUI.hpp  GUIViewPlane.cpp  GUIViewPlane.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  RenderThread.cpp  RenderThread.hpp  RenderWidget.cpp  RenderWidget.hpp
(+23 files in other folders)
